STUD-29 - Вправки по выгрузке из модеуса